# Rat-s-Competition-Genetic-Algorithm-based-symulation-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  core.cpp  core.hpp  dna.cpp  dna.hpp  drawable.cpp  drawable.hpp  geneticAlgorithm.cpp  geneticAlgorithm.hpp  main.cpp  quicksort.cpp  quicksort.hpp
Colsion_detection_based_on_SAT/: CMakeLists.txt
Game_loop_handler_for_SFML/: CMakeLists.txt  README.md  fpsClock.cpp  fpsClock.hpp
Labrat/: CMakeLists.txt  dna.hpp  labRat.cpp  labRat.hpp
inc/: core.hpp  population.hpp
src/: core.cpp  population.cpp
